[tool.poetry]
name = "tic_tac_toe_rl"
version = "0.1.0"
description = "Code for a reinforcement learning exaple with the tic tac toe game"
authors = ["Saul Diaz-Infante"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
