[tool.poetry]
name = "tic_tac_toe_rl"
version = "0.1.0"
description = "Code for a reinforcement learning exaple with the tic tac toe game"
authors = ["Saul Diaz-Infante"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.1.post1"
numpy = "^2.0.1"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
alive-progress = "^3.1.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
jupyter = "^1.0.0"
myst-nb = {version = "^1.1.1", python = "^3.9"}
sphinx-autoapi = "^3.2.1"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
